prod.tf
provider "aws" {
	profile = "default"
	region  = "us-east-1"
}


resource "aws_s3_bucket" "prod_tf_course" {
	bucket = "prod-tfcourse-2020-10-19-prassannas"
	acl = "private"
}

data "aws_vpc" "default" {
 default =  true
}

resource "aws_security_group" "prod_web_sg" {
	#vpc_id      = "default_vpc"
	name        = "prod_web_sg"
	description = "Allow standard http and https ports inbound and everything outbound"

		ingress {
			from_port   = 80
			to_port     = 80
			protocol    = "tcp"
			cidr_blocks = ["0.0.0.0/0"]
		}
		ingress {
			from_port   = 443
			to_port     = 443
			protocol    = "tcp"
			cidr_blocks = ["0.0.0.0/0"]
		}
		egress {
			from_port   = 0
			to_port     = 0
			protocol    = "-1"
			cidr_blocks = ["0.0.0.0/0"]
		}

		tags = {
			"Terraform" : "true"
		}

	}

	resource "aws_instance" "prod_web"{
			count    = 2

 			ami 				= "ami-0708a0921e5eaf65d"
 			instance_type   		= "t2.nano"

 			vpc_security_group_ids          = [
 			aws_security_group.prod_web_sg.id
			]
 
 			tags = {
           		 "Terraform" : "true"
        	}
	}

     resource "aws_eip_association" "prod_web" {

        instance_id    = aws_instance.prod_web.0.id
		allocation_id  = aws_eip.prod_web.id
        

     }

	 

	resource "aws_eip" "prod_web" {
		 

		 tags = {
           		 "Terraform" : "true" 
         }

	}
